# python-bods-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  justfile  pyproject.toml  setup.cfg
.github/workflows/: pypi.yml  test.yml
bods_client/: client.py  constants.py  models.py
bods_client/models/: __init__.py  avl.py  base.py  fares.py  siri.py  timetables.py
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
tests/test_bods_client/: conftest.py  test_client.py  test_siri_model.py
tests/test_bods_client/data/: fare.json  fares.json  good_packet.xml  missing_mvj.xml  missing_service_delivery.xml  missing_vehicle_location.xml  missing_vj_ref.xml  missing_vmd.xml  timetable.json  timetables.json
