[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bods-client"
description = "A Python client for the Department for Transport Bus Open Data Service API"
version = "0.13.0"
license = "MIT"
authors = ["Ciaran McCormick"]
readme = "README.md"
repository = "https://github.com/ciaranmccormick/python-bods-client"
keywords = ["BODS", "bus", "open data", "TXC", "transxchange"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
gtfs-realtime-bindings = "^1.0.0"
importlib-metadata = "^4.0.0"
lxml = "^4.7.1"
protobuf = "^3.20.0"
pydantic = "~2.8"
python-dateutil = "~2.8"
requests = "^2.25.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
doc8 = "^0.8"
flake8 = "^7.1.0"
flake8-pytest-style = "^1.3"
ipdb = "^0.13.4"
ipython = ">=8.0.1,<9.0.0"
isort = "^5.7.0"
lxml-stubs = "^0.3.0"
m2r2 = "^0.2"
mypy = "^1.11.0"
pip-audit = "^2.4.4"
pre-commit = "^3.8.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.5"
requests-mock = "^1.9.3"
sphinx = "^3.5"
sphinx-autodoc-typehints = "^1.11"
tomlkit = "^0.7"
types-requests = "^2.28.11.2"
types-toml = "^0.10.8"
