[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bods-client"
description = "A Python client for the Department for Transport Bus Open Data Service API"
version = "0.13.0"
license = "MIT"
authors = ["Ciaran McCormick"]
readme = "README.md"
repository = "https://github.com/ciaranmccormick/python-bods-client"
keywords = ["BODS", "bus", "open data", "TXC", "transxchange"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
gtfs-realtime-bindings = "^1.0.0"
importlib-metadata = "^4.0.0"
lxml = "^4.7.1"
protobuf = "^3.20.0"
pydantic = "~2.8"
python-dateutil = "~2.8"
requests = "^2.25.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
doc8 = "^0.8"
flake8 = "^7.1.0"
flake8-pytest-style = "^2.0"
ipdb = "^0.13.4"
ipython = ">=8.0.1,<9.0.0"
isort = "^5.13.0"
lxml-stubs = ">=0.5.0"
mypy = "^1.11.0"
pip-audit = ">=2.7.0"
pre-commit = "^3.8.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.5"
requests-mock = "^1.9.3"
sphinx = "^3.5"
sphinx-autodoc-typehints = "^1.11"
tomlkit = "^0.7"
types-requests = "^2.28.11.2"
types-toml = "^0.10.8"


[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

[tool.mypy-google.transit.gtfs_realtime_pb2]
ignore_missing_imports = true

[tool.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 89

[tool.doc8]
# doc8 configuration: https://pypi.org/project/doc8/
ignore-path = ["docs/_build"]
max-line-length = 89
sphinx = true


[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"

# Extra options:
addopts = """--capture=no
  --strict-markers
  --strict-config
  --tb=short
  --doctest-modules
  --cov=bods_client
  --cov-report=term:skip-covered
  --cov-report=html
  --cov-report=xml
  --cov-branch
  --cov-fail-under=98"""
