[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bods-client"
version = "0.14.0"
description = "A Python client for the Department for Transport Bus Open Data Service API"
authors = [{ name = "Ciaran McCormick" }]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = "MIT"
keywords = [
    "BODS",
    "bus",
    "open data",
    "TXC",
    "transxchange",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "gtfs-realtime-bindings>=1.0.0,<2",
    "importlib-metadata>=4.0.0,<5",
    "lxml>=4.7.1,<6",
    "protobuf>=3.20.0,<4",
    "pydantic>=2.8,<2.9",
    "python-dateutil>=2.8,<2.9",
    "requests>=2.25.0,<3",
]

[dependency-groups]
dev = [
    "black>=24.8.0,<25",
    "doc8>=0.8,<0.9",
    "flake8>=7.1.0,<8",
    "flake8-pytest-style~=2.0",
    "ipdb>=0.13.4,<0.14",
    "ipython>=8.0.1,<9.0.0",
    "isort>=5.13.0,<6",
    "lxml-stubs>=0.5.0",
    "mypy>=1.11.0,<2",
    "pip-audit>=2.7.0",
    "pre-commit>=3.8.0,<4",
    "pytest>=8.0.0,<9",
    "pytest-cov>=5.0.0,<6",
    "pytest-randomly~=3.5",
    "requests-mock>=1.9.3,<2",
    "sphinx~=3.5",
    "sphinx-autodoc-typehints~=1.11",
    "tomlkit>=0.7,<0.8",
    "types-requests>=2.28.11.2,<3",
    "types-toml>=0.10.8,<0.11",
]

[project.urls]
repository = "https://github.com/ciaranmccormick/python-bods-client"

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

[tool.mypy-google.transit.gtfs_realtime_pb2]
ignore_missing_imports = true

[tool.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 89

[tool.doc8]
# doc8 configuration: https://pypi.org/project/doc8/
ignore-path = ["docs/_build"]
max-line-length = 89
sphinx = true

[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"

# Extra options:
addopts = """--capture=no
  --strict-markers
  --strict-config
  --tb=short
  --doctest-modules
  --cov=bods_client
  --cov-report=term:skip-covered
  --cov-report=html
  --cov-report=xml
  --cov-branch
  --cov-fail-under=98"""
